tests/parser/statement_if_err4.expected
Syntax Error: line 3:
Unexpected token (TOK_KEY_ELSE, 'else'), likely missing a(n)  
  'TOK_SEMICOLON' or
Possibly due to malformed or missing:
  Non-terminal: 'If Statement' or
  Non-terminal: 'Case Statement'
