tests/parser/statement_if_err4.mtp
begin
	(*if statement with no if, just else*)
	else
		sample := 1;
end
.